# Commandline_UCSD_Class_Search_Engine

./: README.md  pyproject.toml
notebooks/: testing.py
notebooks/__marimo__/session/: testing.py.json
src/commandline_ucsd_class_search_engine/: __init__.py  functions.py  main.py  testing.py
src/commandline_ucsd_class_search_engine/__marimo__/session/: testing.py.json
